--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ label{
   color: white;
 }
 input, select{
-  width: 150px;
+  width: 150px !important;
   height: 25px;
   padding: 5px;
   border-radius: 5px;
